# bus-server

./: Cargo.toml  README.md  Rocket.toml
db/diesel/: db.sqlite
migrations/2023-04-21-110320_current_location/: down.sql  up.sql
migrations/2023-04-21-110427_routes/: down.sql  up.sql
migrations/2023-04-21-110430_busses/: down.sql  up.sql
migrations/2023-04-21-110530_place_locations/: down.sql  up.sql
src/: bus.rs  busses.rs  main.rs  places.rs  routes.rs  schema.rs
